Fixed worklist styling to make better use of width and not wrap elements onto more than one line

--- a/Packages/worklist/components/worklist.styl
+++ b/Packages/worklist/components/worklist.styl
@@ -10,15 +10,15 @@ body
   user-select: none
 
 input.worklist-search
-  height: 25px
+  height: 20px
   background-color: #888888
 
 #tblStudyList
   tr
-    height: 45px
+    height: 20px
 
 .patient-name-input
-  width: 130px
+  width: 200px
 
 .worklist-input
   width: 80px
@@ -27,7 +27,7 @@ input.worklist-search
   width: 60px
 
 .patientid-input
-  width: 70px
+  width: 260px
 
 .study-description-input
   width: 480px
@@ -37,7 +37,9 @@ input.worklist-search
 
 #worklistContainer
   background-color: #202020
-  color: white  
+  color: white
+  width:90%
+  padding-top: 10px
   
 #tabs
   width: 100%
