--- a/Packages/worklist/components/worklistResult/worklistResult.styl
+++ b/Packages/worklist/components/worklistResult/worklistResult.styl
@@ -2,9 +2,10 @@ table#tblStudyList
   color: #888888
   border-collapse: collapse
   border-color: gray
-    
+
   thead
     background-color: black
+    white-space: nowrap
     
     &:hover
       color: #888888
@@ -13,6 +14,9 @@ table#tblStudyList
     padding: 4px
     border: 1px solid #282828
     background-color: black
+
+    td
+      white-space:nowrap
 
     &:nth-of-type(odd)
       background-color: #202020
